evergreen: set default group_bytes to 256

512 seems to cause issues on certain cards.

Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=31724